<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormGUI">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        >

        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/inputfirstname"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/inputsurname"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/inputemail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/location1"
            app:layout_constraintBottom_toTopOf="@+id/editText7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/location2"
            app:layout_constraintBottom_toTopOf="@+id/editText8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText8"
            android:labelFor="@id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/location3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:importantForAutofill="no" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="322dp"
            android:layout_marginRight="322dp"
            android:layout_marginBottom="16dp"
            android:weightSum="1"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:text="@string/title1"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13"
                android:checked="false"
                android:text="@string/title2"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13"
                android:checked="false"
                android:text="@string/title3"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13"
                android:checked="false"
                android:text="@string/title4"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13"
                android:checked="false"
                android:text="@string/title5"
                android:textColor="#03A9F4"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="367dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="8dp"

            android:text="@string/heading"
            android:textColor="#03A9F4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="369dp"
            android:layout_height="27dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/belowheading"
            android:textColor="#03A9F4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editText"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="321dp"
            android:layout_marginRight="321dp"
            android:text="@string/firstname"
            android:textColor="#03A9F4"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="331dp"
            android:layout_marginRight="331dp"
            android:labelFor="@+id/editText2"
            android:text="@string/surname"
            android:textColor="#03A9F4"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/radioGroup"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="360dp"
            android:layout_marginRight="360dp"
            android:text="@string/title"
            android:textColor="#03A9F4"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView6"
            android:labelFor="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="352dp"
            android:layout_marginRight="352dp"
            android:text="@string/email"
            android:textColor="#03A9F4"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView7"
            android:labelFor="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="331dp"
            android:layout_marginRight="331dp"
            android:text="@string/location"
            android:textColor="#03A9F4"
            app:layout_constraintBottom_toTopOf="@+id/editText6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:text="@string/button"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>